Feat(Auth): Implement session handling for login

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,6 @@
   "compilerOptions": {
     "esModuleInterop": true,
     "skipLibCheck": true
-  }
+  },
+  "include": ["server", "src", "types"]
 }
